# FlashMem

./: .firebaserc  Cargo.toml  README.md  firebase.json  package.json  pnpm-lock.yaml  tailwind.config.js
src/: app.html  main.rs  store.ts  translation_response.rs
src-tauri/: .gitignore  Cargo.toml  cargo_build.sh  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: bundle_libs.sh
src-tauri/src/: execute.rs  main.rs  utils.rs
src-tauri/src/execute/: identify_character.rs  saved_sub.rs  tesseract_originated_error.rs  translation_response.rs  vision_response.rs
src/lib/: CroppingSetting.svelte  Execute.svelte  LanguagePicker.svelte  SavedSubs.svelte  SettingsPicker.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/account/: +page.svelte
src/routes/advanced_settings/: +page.svelte
src/routes/saved_subs/: +page.svelte
src/stores/: store.ts
