[package]
name = "flash_mem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "1.1.3"
scrap = "0.5.0"
rdev = "0.5.3"
png = "0.17.11"
chrono = "0.4.32"
reqwest = { version = "0.11.23", features = ["json"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
notify-rust = "4.10.0"
htmlentity = "1.3.1"