[package]
name = "flash_mem"
version = "0.1.0"
description = "A Tauri App to instantly translate subtitles and save them"
authors = ["Samuel Coron"]
license = ""
repository = ""
default-run = "flash_mem"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "global-shortcut-all", "notification-all"] }
device_query = "1.1.3"
xcap = "0.0.3"
rdev = { git = "https://github.com/fufesou/rdev" }
png = "0.17.11"
chrono = "0.4.32"
reqwest = { version = "0.11.23", features = ["json"] }
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
notify-rust = "4.10.0"
htmlentity = "1.3.1"
image = "0.24.8"
regex = "1.10.3"
lazy_static = { version = "1.4.0", features = [] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tesseract = { git = "https://github.com/Relkondo/tesseract-rs" }
base64 = "0.21.7"
thiserror = "1.0.56"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
