[package]
name = "flash_sub"
version = "0.1.0"
description = "A Tauri App to instantly translate subtitles and save them"
authors = ["Samuel Coron"]
license = ""
repository = ""
default-run = "flash_sub"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "shell-open", "global-shortcut-all", "notification-all"] }
xcap = "0.0.3"
rdev = { git = "https://github.com/fufesou/rdev" }
chrono = "0.4.32"
reqwest = { version = "0.11.23", features = ["json"] }
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
htmlentity = "1.3.1"
image = "0.24.8"
regex = "1.10.3"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
base64 = "0.21.7"
thiserror = "1.0.56"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
